Fix text in submenus not turning black on hover in high-contrast theme

--- a/style.css
+++ b/style.css
@@ -1103,6 +1103,10 @@ details summary:focus,
   color: black;
 }
 
+[data-theme="contrast"] #main-menu a:hover {
+  color: black;
+}
+
 [data-theme="contrast"] .menu-item:hover .menu-icon svg {
   fill: black;
 }
